--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "react-toastify": "^11.0.5",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
